# End-to-End-Data-Engineering-Pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
scripts/: run_combine.py  run_download.py
src/: combine.py  config.py  download.py
tests/: test_download.py
